logs/service_err.log
WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.
 * Running on http://www.dexterslab.com:8080
Press CTRL+C to quit
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 187-122-103
127.0.0.1 - - [11/Jun/2024 10:55:24] "GET / HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:55:24] "GET /static/styles/styles.css HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:55:24] "GET /static/images/images_3.jpg HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:55:24] "GET /static/script.js HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:55:27] "GET /video_menu_list.html HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:55:27] "GET /static/styles/video.css HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:55:27] "GET /static/images/video_1.png HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:55:27] "GET /static/images/video_2.png HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:55:27] "GET /static/images/video_3.png HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:55:27] "GET /static/images/video_4.png HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:55:27] "GET /static/images/video_5.png HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:55:27] "GET /static/images/video_6.png HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:55:27] "GET /static/images/video_7.png HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:55:28] "GET /static/video_menu.js HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:55:29] "POST /video_source HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:55:30] "GET /video_source.html HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:55:30] "GET /static/styles/video.css HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:55:30] "GET /static/video_source.js HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:55:30] "GET /video_source HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:55:30] "GET /static/favicon.ico HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:56:14] "GET /video_menu_list.html HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:56:14] "GET /static/styles/video.css HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:56:14] "GET /static/video_menu.js HTTP/1.1" 304 -
127.0.0.1 - - [11/Jun/2024 10:56:14] "GET /static/images/video_1.png HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:56:14] "POST /delete_row HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:56:14] "GET /static/images/video_2.png HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:56:14] "GET /static/images/video_3.png HTTP/1.1" 304 -
127.0.0.1 - - [11/Jun/2024 10:56:14] "GET /static/images/video_4.png HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:56:14] "GET /static/images/video_5.png HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:56:14] "GET /static/images/video_6.png HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:56:14] "GET /static/images/video_7.png HTTP/1.1" 304 -
127.0.0.1 - - [11/Jun/2024 10:56:25] "POST /video_source HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:56:26] "GET /video_source.html HTTP/1.1" 200 -
127.0.0.1 - - [11/Jun/2024 10:56:26] "GET /static/styles/video.css HTTP/1.1" 304 -
127.0.0.1 - - [11/Jun/2024 10:56:26] "GET /static/video_source.js HTTP/1.1" 304 -
127.0.0.1 - - [11/Jun/2024 10:56:26] "GET /video_source HTTP/1.1" 200 -
 * Detected change in 'C:\\Users\\nn\\dexterslab\\Library\\basic_backend.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 187-122-103
 * Detected change in 'C:\\Users\\nn\\dexterslab\\Library\\basic_backend.py', reloading
 * Restarting with stat
Traceback (most recent call last):
  File "C:\Users\nn\dexterslab\main.py", line 3, in <module>
    from Library import model as Model
  File "C:\Users\nn\dexterslab\Library\model.py", line 1, in <module>
    from . import basic_backend
  File "C:\Users\nn\dexterslab\Library\basic_backend.py", line 77
    if
      ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "C:\Users\nn\dexterslab\main.py", line 3, in <module>
    from Library import model as Model
  File "C:\Users\nn\dexterslab\Library\model.py", line 1, in <module>
    from . import basic_backend
  File "C:\Users\nn\dexterslab\Library\basic_backend.py", line 77
    if os.name
              ^
SyntaxError: expected ':'
Traceback (most recent call last):
  File "C:\Users\nn\dexterslab\main.py", line 3, in <module>
    from Library import model as Model
  File "C:\Users\nn\dexterslab\Library\model.py", line 1, in <module>
    from . import basic_backend
  File "C:\Users\nn\dexterslab\Library\basic_backend.py", line 77
    if os.name 
               ^
SyntaxError: expected ':'
Traceback (most recent call last):
  File "C:\Users\nn\dexterslab\main.py", line 3, in <module>
    from Library import model as Model
  File "C:\Users\nn\dexterslab\Library\model.py", line 1, in <module>
    from . import basic_backend
  File "C:\Users\nn\dexterslab\Library\basic_backend.py", line 78
    with open('C:\\Users\\nn\\dexterslab\\video_sources.json') as f:
    ^
IndentationError: expected an indented block after 'if' statement on line 77
WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.
 * Running on http://www.dexterslab.com:8080
Press CTRL+C to quit
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 187-122-103
 * Detected change in 'C:\\Users\\nn\\dexterslab\\Library\\basic_backend.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 187-122-103
 * Detected change in 'C:\\Users\\nn\\dexterslab\\Library\\basic_backend.py', reloading
 * Restarting with stat
Traceback (most recent call last):
  File "C:\Users\nn\dexterslab\main.py", line 3, in <module>
    from Library import model as Model
  File "C:\Users\nn\dexterslab\Library\model.py", line 1, in <module>
    from . import basic_backend
  File "C:\Users\nn\dexterslab\Library\basic_backend.py", line 85
    def insert_video_src(video_source):
IndentationError: expected an indented block after 'else' statement on line 84
Traceback (most recent call last):
  File "C:\Users\nn\dexterslab\main.py", line 3, in <module>
    from Library import model as Model
  File "C:\Users\nn\dexterslab\Library\model.py", line 1, in <module>
    from . import basic_backend
  File "C:\Users\nn\dexterslab\Library\basic_backend.py", line 85
    def insert_video_src(video_source):
IndentationError: expected an indented block after 'else' statement on line 84
Traceback (most recent call last):
  File "C:\Users\nn\dexterslab\main.py", line 3, in <module>
    from Library import model as Model
  File "C:\Users\nn\dexterslab\Library\model.py", line 1, in <module>
    from . import basic_backend
  File "C:\Users\nn\dexterslab\Library\basic_backend.py", line 86
    def insert_video_src(video_source):
IndentationError: expected an indented block after 'else' statement on line 84
Traceback (most recent call last):
  File "C:\Users\nn\dexterslab\main.py", line 3, in <module>
    from Library import model as Model
  File "C:\Users\nn\dexterslab\Library\model.py", line 1, in <module>
    from . import basic_backend
  File "C:\Users\nn\dexterslab\Library\basic_backend.py", line 86
    def insert_video_src(video_source):
IndentationError: expected an indented block after 'else' statement on line 84
